--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="C:\Users\produccion\Web Development\Project 2\mysitecss\styles.css">
+    <link rel="stylesheet" href="Project 2\mysitecss\styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="images\favicon.ico">
+    <link rel="icon" href="Project 2\images\favicon.ico">
         <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Pistacho Web</title>
 </head>
